# census

./: .env.example  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: scaleway.yml
alembic/: env.py
alembic/versions/: 66bf27fb08bc_add_userservicesubtenant_and_.py
app/: main.py
app/api/v1/: router.py  schemas.py
app/api/v1/endpoints/: authentication.py  fields.py  groups.py  permissions.py  users.py
app/core/: auth.py  config.py  database.py  init_defaults.py  models.py
tests/: test_api.py  test_defaults.py  test_service_access.py
